--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   "author": "",
   "dependencies": {
     "body-parser": "~1.12.0",
+    "compression": "*",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "express": "~4.12.2",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
     "ejs": "*",
+    "express": "~4.12.2",
     "log4js": "*",
     "mobile-agent": "*",
-    "urllib": "*",
-    "compression": "*"
+    "morgan": "~1.5.1",
+    "mysql": "^2.11.1",
+    "serve-favicon": "~2.2.0",
+    "urllib": "*"
   }
 }
